--- a/frontend/src/Components/App.css
+++ b/frontend/src/Components/App.css
@@ -14,6 +14,10 @@ html, body {
   height: 100%;
 }
 
+.main_page{
+  min-height: calc(100vh - 73px - 130px);
+}
+
 img {
   width: 50px;
   height: 40px;
